fixed example and added documentation

--- a/examples/Examples.ipynb
+++ b/examples/Examples.ipynb
@@ -2,27 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from causaleffect import *\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "from causaleffect import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +84,7 @@
        "</symbol>\n",
        "</g>\n",
        "</defs>\n",
-       "<g id=\"surface8\">\n",
+       "<g id=\"surface2\">\n",
        "<rect x=\"0\" y=\"0\" width=\"300\" height=\"300\" style=\"fill:rgb(100%,100%,100%);fill-opacity:1;stroke:none;\"/>\n",
        "<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,53.333333%,20%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 150 260 C 191.492188 240.289063 225.445313 211.523438 247.929688 171.496094 \"/>\n",
        "<path style=\" stroke:none;fill-rule:nonzero;fill:rgb(0%,53.333333%,20%);fill-opacity:1;\" d=\"M 254.914063 159.054688 L 251.96875 173.765625 L 243.886719 169.226563 L 254.914063 159.054688 \"/>\n",
@@ -129,10 +118,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<igraph.drawing.Plot at 0x6062cf8>"
+       "<igraph.drawing.Plot at 0x5012080>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {
       "image/svg+xml": {
        "isolated": true
@@ -147,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
