--- a/documentation/joss/paper.bib
+++ b/documentation/joss/paper.bib
@@ -1,13 +1,12 @@
-@article{Pearson:2017,
-  	url = {http://adsabs.harvard.edu/abs/2017arXiv170304627P},
-  	Archiveprefix = {arXiv},
-  	Author = {{Pearson}, S. and {Price-Whelan}, A.~M. and {Johnston}, K.~V.},
-  	Eprint = {1703.04627},
-  	Journal = {ArXiv e-prints},
-  	Keywords = {Astrophysics - Astrophysics of Galaxies},
-  	Month = mar,
-  	Title = {{Gaps in Globular Cluster Streams: Pal 5 and the Galactic Bar}},
-  	Year = 2017
+@article{Pearl:2006a,
+  	url = {https://www.aaai.org/Papers/AAAI/2006/AAAI06-191.pdf},
+  	Author = {{Shpitser}, I. and {Pearl}, J.},
+  	Journal = {AAAI Press},
+  	Title = {{Identification of Joint Interventional Distributions in Recursive Semi-Markovian Causal Models}},
+  	volume={21},
+  	number={2},
+  	pages={1219},
+  	Year = 2006
 }
 
 @book{Binney:2008,
@@ -19,15 +18,24 @@
   	Year = 2008
 }
 
-@inproceedings{10.5555/1597348.1597382,
-	author = {Shpitser, Ilya and Pearl, Judea},
-	title = {Identification of Joint Interventional Distributions in Recursive Semi-Markovian Causal Models},
-	year = {2006},
-	isbn = {9781577352815},
-	publisher = {AAAI Press},
-	booktitle = {Proceedings of the 21st National Conference on Artificial Intelligence - Volume 2},
-	pages = {1219–1226},
-	numpages = {8},
-	location = {Boston, Massachusetts},
-	series = {AAAI'06}
+@inproceedings{shpitser2006identification,
+  title={Identification of joint interventional distributions in recursive semi-Markovian causal models},
+  author={Shpitser, Ilya and Pearl, Judea},
+  booktitle={Proceedings of the National Conference on Artificial Intelligence},
+  volume={21},
+  number={2},
+  pages={1219},
+  year={2006},
+  organization={Menlo Park, CA; Cambridge, MA; London; AAAI Press; MIT Press; 1999}
+}
+
+@article{shpitser2006identification2,
+  title={Identification of joint interventional distributions in recursive semi-Markovian causal models},
+  author={Shpitser, Ilya and Pearl, Judea},
+  booktitle={Proceedings of the National Conference on Artificial Intelligence},
+  volume={21},
+  number={2},
+  pages={1219},
+  year={2006},
+  organization={Menlo Park, CA; Cambridge, MA; London; AAAI Press; MIT Press; 1999}
 }
