--- a/documentation/joss/paper.bib
+++ b/documentation/joss/paper.bib
@@ -5,37 +5,15 @@
   	Title = {{Identification of Joint Interventional Distributions in Recursive Semi-Markovian Causal Models}},
   	volume={21},
   	number={2},
-  	pages={1219},
+  	pages={1219-1226},
   	Year = 2006
 }
 
-@book{Binney:2008,
-  	url = {http://adsabs.harvard.edu/abs/2008gady.book.....B},
-  	Author = {{Binney}, J. and {Tremaine}, S.},
-  	Booktitle = {Galactic Dynamics: Second Edition, by James Binney and Scott Tremaine.~ISBN 978-0-691-13026-2 (HB).~Published by Princeton University Press, Princeton, NJ USA, 2008.},
-  	Publisher = {Princeton University Press},
-  	Title = {{Galactic Dynamics: Second Edition}},
-  	Year = 2008
-}
-
-@inproceedings{shpitser2006identification,
-  title={Identification of joint interventional distributions in recursive semi-Markovian causal models},
-  author={Shpitser, Ilya and Pearl, Judea},
-  booktitle={Proceedings of the National Conference on Artificial Intelligence},
-  volume={21},
-  number={2},
-  pages={1219},
-  year={2006},
-  organization={Menlo Park, CA; Cambridge, MA; London; AAAI Press; MIT Press; 1999}
-}
-
-@article{shpitser2006identification2,
-  title={Identification of joint interventional distributions in recursive semi-Markovian causal models},
-  author={Shpitser, Ilya and Pearl, Judea},
-  booktitle={Proceedings of the National Conference on Artificial Intelligence},
-  volume={21},
-  number={2},
-  pages={1219},
-  year={2006},
-  organization={Menlo Park, CA; Cambridge, MA; London; AAAI Press; MIT Press; 1999}
+@article{Pearl:2006b,
+  	url = {https://arxiv.org/ftp/arxiv/papers/1206/1206.6876.pdf},
+  	Author = {{Shpitser}, I. and {Pearl}, J.},
+  	Journal = {AUAI Press},
+  	Title = {{Identification of Conditional Interventional Distributions}},
+  	pages={437-444},
+  	Year = 2006
 }
