--- a/documentation/joss/paper.bib
+++ b/documentation/joss/paper.bib
@@ -17,3 +17,33 @@
   	pages={437-444},
   	Year = 2006
 }
+
+@misc{pedemonte2021algorithmic,
+	url = {https://arxiv.org/abs/2107.04632},
+	title={Algorithmic Causal Effect Identification with causaleffect}, 
+	author={{Pedemonte}, M., {Vitrià}, J. and {Parafita}, Á.},
+	year={2021},
+	eprint={2107.04632},
+	archivePrefix={arXiv},
+	primaryClass={cs.MS}
+}
+
+@article{Pearl:1995,
+	url = {https://escholarship.org/content/qt6gv9n38c/qt6gv9n38c.pdf},
+	Author = {{Pearl}, J.},
+	Journal = {Biometrika},
+	Title = {{Causal Diagrams for Empirical Research}},
+	volume={82},
+  	number={4},
+  	pages={669-688},
+  	Year = 1995
+}
+
+@misc{GithubCausaleffect,
+	author = {{Pedemonte}, M.},
+	title = {causaleffect},
+	year = {2021},
+	publisher = {GitHub},
+	journal = {GitHub repository},
+	url = {https://github.com/pedemonte96/causaleffect}
+}
