--- a/documentation/joss/paper.bib
+++ b/documentation/joss/paper.bib
@@ -18,10 +18,10 @@
   	Year = 2006
 }
 
-@misc{pedemonte2021algorithmic,
+@misc{Pedemonte:2021,
 	url = {https://arxiv.org/abs/2107.04632},
 	title={Algorithmic Causal Effect Identification with causaleffect}, 
-	author={{Pedemonte}, M., {Vitrià}, J. and {Parafita}, Á.},
+	author={{Pedemonte}, M. and {Vitrià}, J. and {Parafita}, Á.},
 	year={2021},
 	eprint={2107.04632},
 	archivePrefix={arXiv},
@@ -39,7 +39,7 @@
   	Year = 1995
 }
 
-@misc{GithubCausaleffect,
+@misc{causaleffect:2021,
 	author = {{Pedemonte}, M.},
 	title = {causaleffect},
 	year = {2021},
