statement of need

--- a/documentation/joss/paper.bib
+++ b/documentation/joss/paper.bib
@@ -5,7 +5,7 @@
   	Title = {{Identification of Joint Interventional Distributions in Recursive Semi-Markovian Causal Models}},
   	volume={21},
   	number={2},
-  	pages={1219-1226},
+  	pages={1219--1226},
   	Year = 2006
 }
 
@@ -14,7 +14,7 @@
   	Author = {{Shpitser}, I. and {Pearl}, J.},
   	Journal = {AUAI Press},
   	Title = {{Identification of Conditional Interventional Distributions}},
-  	pages={437-444},
+  	pages={437--444},
   	Year = 2006
 }
 
@@ -35,15 +35,34 @@
 	Title = {{Causal Diagrams for Empirical Research}},
 	volume={82},
   	number={4},
-  	pages={669-688},
+  	pages={669--688},
   	Year = 1995
 }
 
 @misc{causaleffect:2021,
 	author = {{Pedemonte}, M.},
-	title = {causaleffect},
+	title = {{causaleffect}},
 	year = {2021},
 	publisher = {GitHub},
 	journal = {GitHub repository},
+	url = {https://github.com/pedemonte96/causaleffect}
+}
+
+@article{Tikka:2017,
+  	url = {https://www.jstatsoft.org/article/view/v076i12},
+  	Author = {{Tikka}, S. and {Karvanen}, J.},
+  	Journal = {Journal of Statistical Software, Articles},
+  	Title = {{Identifying Causal Effects with the R Package causaleffect}},
+  	pages={437-444},
+  	volume = {76},
+   	number = {12},
+   	pages = {1--30},
+  	Year = 2017
+}
+
+@misc{Tiobe:2021,
+	author = {{TIOBE} Software BV},
+	title = {{TIOBE Index for June 2021}},
+	year = {2021},
 	url = {https://github.com/pedemonte96/causaleffect}
 }
