--- a/documentation/joss/paper.bib
+++ b/documentation/joss/paper.bib
@@ -61,8 +61,8 @@
 }
 
 @misc{Tiobe:2021,
-	author = {{TIOBE} Software BV},
-	title = {{TIOBE Index for June 2021}},
+	author = {{TIOBE}},
+	title = {{TIOBE Index for July 2021}},
 	year = {2021},
-	url = {https://github.com/pedemonte96/causaleffect}
+	url = {https://www.tiobe.com/tiobe-index/}
 }
